feat(insurance): persist demo portfolio in Supabase with SQL setup

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # OpenAI API Key - leave empty to use demo mode
 OPENAI_API_KEY=
 
-# Optional: Supabase for vector storage
-SUPABASE_URL=
-SUPABASE_ANON_KEY=
+# Optional: Supabase
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Optional (recommended server-side): Supabase service role for API routes
+SUPABASE_SERVICE_ROLE_KEY=
